[package]
name = "fm-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
serde_repr = {workspace = true}
hmac = {workspace = true}
sha2 = {workspace = true}
twilio = {workspace = true}
rand = {workspace = true}
hex = {workspace = true}
hex-literal = "0.4.1"
tokio = {workspace = true, features = ["full"]}
mongodb = { workspace = true, features = ["sync"] }
