[package]
name = "fm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {workspace = true}
fm-lib = {workspace = true}
mongodb = { workspace = true, features = ["sync"] }
serde = {workspace = true, features = ["derive"]}
reqwest = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
actix-web = {workspace = true}
fm-lib = {workspace = true}
mongodb = { workspace = true, features = ["sync"] }
serde = {workspace = true, features = ["derive"]}
near-workspaces = {workspace = true}
